<resources>
    <string name="app_name">Moviez</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="select_profile_image">Select Profile Image</string>
    <string name="register">Register</string>
    <string name="explore">Explore</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="profile_management">Profile Management</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="github">Github</string>
    <string name="logout">Logout</string>
    <string name="don_t_have_an_acount_yet_click_to_register">Don\'t have an account yet?\nClick to register</string>
    <string name="login">Login</string>
    <string name="movie_title">Movie Title</string>
    <string name="description">• Description:</string>
    <string name="rating">• Rating:</string>
    <string name="votes">Votes:</string>
    <string name="favorite">Favorite</string>
    <string name="favorites">Favorites</string>
    <string name="add_to_favorites">Add To Favorites</string>
    <string name="remove_from_favorites">Remove From Favorites</string>
    <string name="release_date">• Release date: %1$s</string>
    <string name="no_trailer">No trailer found—here\'s Rick Astley!</string>
    <string name="profile_image">Profile Image</string>
    <string name="enter_name">Enter Name</string>
    <string name="update_profile">Update Profile</string>
    <string name="upcoming">• Upcoming</string>
    <string name="top_rated">• Top Rated</string>
    <string name="register_title">Register</string>
    <string name="login_title">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="search_movie">Search Movie</string>
    <string name="searching">Searching...</string>
    <string name="toptext">TopText</string>
    <string name="bottomtext">BottomText</string>
    <string name="movie_details_label">Movie Details</string>
    <string name="explore_label">Explore</string>
    <string name="search_label">Search</string>
    <string name="profile_label">Profile</string>
    <string name="favorites_label">Favorites</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="login_successful">Login successful</string>
    <string name="logout_toast">Logout!</string>
    <string name="profile_updated_successfully">Profile updated successfully</string>
    <string name="error_updating_profile">Error updating profile: %1$s</string>
    <string name="registration_successful">Registration Successful</string>
    <string name="name_must_be_at_least_3_characters_long">Name must be at least 3 characters long.</string>
    <string name="no_changes_to_update">No changes to update.</string>
    <string name="network_call_has_failed_for_the_following_reason">"Network call has failed for the following reason: "</string>
    <string name="network_call_has_failed_for_the_following_reason2">"Network call has failed for the following reason: "</string>
    <string name="empty_email_or_password">Empty email or password</string>
    <string name="empty_strings">Empty Strings</string>
    <string name="not_a_valid_email">Not a valid email</string>
    <string name="no_results">No Results</string>
    <string name="search_movies">Search movies</string>
    <string name="search_movies_btn">Search</string>
    <string name="search_btn">Search</string>
    <string name="change_profile_image">Change Profile Image</string>
    <string name="movie_title_upcoming">Movie Title</string>
    <string name="release_date_upcoming">Release Date</string>
    <string name="current_name">Current Name:</string>
    <string name="name_profile">Name</string>
    <string name="description_not_found">Description not found</string>
    <string name="release_date_not_found">• Release date: Not found</string>
    <string name="password_must_be_at_least_6_characters">Password must be at least 6 characters</string>
    <string name="remove_from_favorites_dialog_title">Remove from Favorites</string>
    <string name="are_you_sure_you_want_to_remove_this_movie_from_your_favorites">Are you sure you want to remove this movie from your favorites?</string>
    <string name="yes_dialog">Yes</string>
    <string name="no">No</string>
    <string name="incorrect_email_or_password">Incorrect email or password</string>
    <string name="email_badly_formatted">The email address is badly formatted.</string>
    <string name="the_email_already_registered">The email already registered</string>
    <string name="genre">• Genre: </string>
    <string name="title">Title</string>
    <string name="tmp">tmp</string>
    <string name="tmp_date">2024/07/22</string>
    <string name="video">• Trailer:</string>
    <string name="gallery">• Gallery:</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="genres_not_found">Not found</string>
    <string name="no_favorites">No Favorites</string>
    <string name="language_change">Language Change</string>
    <string name="to_apply_changes_please_restart_the_app">To apply changes, please restart the app.</string>
    <string name="restart">Restart</string>

</resources>