<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_profile_manage"
            android:icon="@drawable/ic_profile_placeholder"
            android:title="@string/profile_management"/>
        <item
            android:id="@+id/nav_github"
            android:icon="@drawable/nav_github"
            android:title="@string/github"/>
    </group>
    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/nav_logout"
                android:title="@string/logout"/>
        </menu>
    </item>
</menu>