<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/profileImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:background="#00E17351"
            android:contentDescription="@string/profile_image"
            android:src="@drawable/ic_profile_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/changeProfileImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_profile_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileImageView" />

        <LinearLayout
            android:id="@+id/currentNameLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changeProfileImage">

            <TextView
                android:id="@+id/currentNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_name"
                android:textAppearance="?attr/textAppearanceSubtitle1" />

            <TextView
                android:id="@+id/currentName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_profile"
                android:textAppearance="?attr/textAppearanceBody1" />
        </LinearLayout>

        <EditText
            android:id="@+id/profileNameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/enter_name"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currentNameLayout" />

        <Button
            android:id="@+id/updateProfileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileNameEditText" />

        <ProgressBar
            android:id="@+id/profileProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateProfileButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
