<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movie_detail.MovieDetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:backgroundTint="@color/white"
        android:foregroundTint="@color/orange_light"
        android:theme="@style/ThemeOverlay.AppCompat.Light">
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/colapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:fitsSystemWindows="true"
            android:foregroundTint="@color/orange_light"
            app:contentScrim="@color/orange"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:popupTheme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:title=""
            app:titleEnabled="true">

            <ImageView
                android:id="@+id/movie_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="tmp"
                tools:src="@drawable/film"
                android:fitsSystemWindows="true"
                android:scaleType="fitCenter"
                app:layout_collapseMode="parallax" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/cardstates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:elevation="0dp"
        android:overScrollMode="never"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="0dp">

                    <TextView
                        android:id="@+id/movie_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="marquee"
                        android:letterSpacing="0.1"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:padding="20dp"
                        android:singleLine="false"
                        android:text=" "
                        android:textColor="@color/black"
                        android:autoSizeMaxTextSize="26sp"
                        android:textSize="22sp"
                        android:autoSizeMinTextSize="20sp"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_below="@+id/title"
                    android:id="@+id/info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="22sp"
                        android:textColor="@color/black"
                        android:layout_centerVertical="true"
                        android:layout_alignParentStart="true"
                        android:text="Description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <LinearLayout
                        android:gravity="center"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView

                            android:layout_marginLeft="5dp"
                            android:id="@+id/movie_release_date_text"
                            android:layout_centerVertical="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="2024/07/22"
                            android:layout_marginStart="5dp"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                    </LinearLayout>
                </RelativeLayout>

                <TextView
                    android:id="@+id/movie_description"
                    android:autoLink="web"
                    android:textSize="18sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/info"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:id="@+id/LayoutRatingVotes"
                    android:layout_below="@+id/movie_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    >
                    <TextView
                        android:id="@+id/movie_rating_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/rating"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/movie_rating"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text=""
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/movie_votes_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/votes"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/movie_vote"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text=""
                        android:textSize="20sp" />
                </LinearLayout>
                <TextView
                    android:id="@+id/genresTitle"
                    android:layout_below="@+id/LayoutRatingVotes"
                    android:textSize="14sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="• Genre"
                    android:letterSpacing="0.15"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/genres"
                    android:layout_below="@+id/genresTitle"
                    android:textSize="14sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/video"
                    android:layout_below="@+id/genres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:letterSpacing="0.15"
                    android:text="• Video"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/no_trailer_text"
                    android:layout_below="@+id/video"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/no_trailer"
                    android:visibility="invisible"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    />


                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:indeterminate="true"
                    android:visibility="gone"/>

                <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                    android:id="@+id/youtube_player_view"
                    android:layout_below="@+id/no_trailer_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="10dp"
                    app:autoPlay="false"
                    />

                <TextView
                    android:id="@+id/screen_shots"
                    android:layout_below="@+id/youtube_player_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:letterSpacing="0.15"
                    android:text="• Screenshots"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/black"
                    android:textSize="14sp" />


                <LinearLayout
                    android:id="@+id/btns_linear_layout"
                    android:layout_below="@id/screen_shots"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="25dp"
                    android:gravity="center|center_horizontal"
                    >

                    <Button
                        android:id="@+id/btn_add_favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_to_favorites"
                        />
                    <Button
                        android:id="@+id/btn_remove_favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/remove_from_favorites"

                        android:visibility="gone"/>
                </LinearLayout>

            </RelativeLayout>


        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

